--- a/front/src/index.css
+++ b/front/src/index.css
@@ -152,12 +152,12 @@ background-color: #F5F5F5;
   padding: 45px 50px;
   gap:10px;
   text-align: left;
- 
 }
 
 .first-page-row-block{
   display: flex;
   align-items: center;
+  line-height: 0;
 }
 
 .first-page-row-block p{
@@ -175,5 +175,197 @@ color: #000000;
   width:32px;
   height: 32px;
   float: left;
-  margin-right: 7px;
+  margin-right: 10px;
 }
+
+.second-page{
+  margin-top: 96px;
+}
+
+.content-container-second-page{
+  max-width: 1110px;
+  margin: 0 auto;
+  padding: 0 50px;
+  position: relative;
+}
+
+.second-page-header{
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.slider-visible-wrapper{
+  border: solid;
+  max-width: 1110px;
+  margin: 0 auto;
+  padding: 0 10px;
+  overflow: auto;
+  position: relative;
+}
+
+.arrow-left{
+  position: absolute;
+  top:39%;
+  right:50px;
+  transition: 0.3s;
+  background: #FFFFFF;
+box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.15);
+padding: 7px 7px 7px 10px;
+z-index: 10;
+}
+
+.arrow-right{
+  position: absolute;
+  top:39%;
+  left:50px;
+  transition: 0.3s;
+  
+  background: #FFFFFF;
+box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.15);
+padding: 7px 10px 7px 7px;
+z-index: 10;
+
+}
+
+.arrow-left:hover, .arrow-right:hover{
+  cursor: pointer;
+  transform: scale(1.2);
+  transition: 0.3s;
+}
+
+
+.slider-string{
+  display: flex;
+  transition-property: transform;
+}
+
+.card-frame{
+  width: 358px;
+  border: solid;
+  border: #EFEFEF solid 0.5px;
+  flex-shrink: 0;
+}
+
+.product-info{
+  position: relative;
+  text-align: center;
+  margin-top: 15px;
+}
+
+.product-img-wrapper{
+  display: flex;
+  align-items: center;
+  width:190px;
+  height: 190px;
+  margin: 0 auto;
+}
+
+.product-img{
+  width: inherit;
+  
+}
+
+.model{
+  font-style: normal;
+font-weight: 700;
+font-size: 16px;
+
+/* or 162% */
+
+text-align: center;
+
+color: #000000;
+}
+
+.brand{
+  font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 26px;
+/* or 186% */
+text-align: center;
+color: #75758A;
+
+}
+
+.card-block-nav{
+  position: absolute;
+  top:0;
+  right: 15px;
+}
+
+.card-block-nav:hover{
+cursor: pointer;
+}
+
+.card-block-nav img{
+  display: block;
+  margin-bottom: 10px;
+}
+
+.product-pricing{
+  display: flex;
+  margin-top: 10px;
+}
+
+.product-pricing-box{
+  font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 26px;
+/* or 186% */
+text-align: center;
+color: #75758A;
+width:100%;
+border: #EFEFEF solid 0.5px;
+padding: 17px 0 14px;
+}
+
+.product-pricing-box-price{
+  font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 20px;
+/* or 143% */
+
+text-align: center;
+color: #000000;
+display: block;
+}
+
+
+.product-options{
+  display: flex;
+  padding: 12px 20px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.view-details,.add-to-basket{
+  width:47%;
+  padding: 10px 10px;
+  border:none;
+  background: #FFFFFF;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.15);
+  border-radius: 100px;
+  margin: 7px 0;
+  transition: 0.5s all;
+}
+
+.view-details:hover,.add-to-basket:hover{
+  background-color: #76c302;
+  transition: 0.5s all;
+  cursor: pointer;
+}
+
+.add-to-basket{
+  padding: 8px 10px;
+}
+
+.add-to-basket img{
+  margin-right: 7px;
+  width: 16px;
+  height: 16px;
+}
+
