--- a/front/src/components/FirstPage.css
+++ b/front/src/components/FirstPage.css
@@ -5,16 +5,6 @@
   /* border: solid; */
 }
 
-ul{
-  list-style-type: none;
-}
-
-.green{
-background: linear-gradient(180deg, #8EE902 0%, #4F9C2C 100%);
-box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
-border-radius: 100px;
-}
-
 
 body{
   max-width: 100%;
@@ -22,58 +12,12 @@ body{
 }
 
 .content-container{
-  max-width: 1110px;
+  max-width: 1210px;
   margin: 0 auto;
   padding: 0 50px;
  position: relative;
 }
 
-header{
-  display: flex;
-  padding: 23px 0;
-  align-items: center;
-  justify-content: space-between;
-  text-align: center;
-}
-
-.logo{
-  display: flex;
-  align-items: center;
-}
-
-.nav-list, .options-list{
-  display: flex;
-  gap:15px;
-}
-
-.nav-list{
-font-family: 'Ubuntu';
-font-style: normal;
-font-weight: 700;
-font-size: 14px;
-line-height: 18px;
-display: flex;
-flex-wrap: wrap;
-justify-content: center;
-}
-
-.nav-list a{
-  text-decoration: none;
-  color: black;
-}
-
-.nav-li a{
-  transition: all 0.3s ;
-}
-
-.nav-li a:hover{
-  color: #71bb02;
-  /* background: linear-gradient(270deg, #8EE901 0%, #4F9C2C 99.06%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text; */
-  transition: all 0.3s ;
-}
 
 .first-page{
   width:100%;
@@ -158,7 +102,7 @@ background-color: #F5F5F5;
 
 .first-page-row-block{
   min-width: 120px;
-  width:19%;
+  width:19.5%;
   display: flex;
   align-items: center;
   line-height: 0;
@@ -189,7 +133,7 @@ color: #000000;
 }
 
 .content-container-second-page{
-  max-width: 1110px;
+  max-width: 1210px;
   margin: 0 auto;
   padding: 0 50px;
   position: relative;
@@ -318,7 +262,9 @@ cursor: pointer;
 
 .product-pricing{
   display: flex;
+  width: 100%;
   margin-top: 10px;
+
 }
 
 .product-pricing-box{
@@ -345,7 +291,7 @@ line-height: 20px;
 
 text-align: center;
 color: #000000;
-display: block;
+display: inline-block;
 }
 
 
@@ -430,7 +376,7 @@ transition: 1s all;
 
 .images-page{
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-wrap: wrap;
   margin-top: 20px;
 }
@@ -441,7 +387,7 @@ transition: 1s all;
 }
 
 .image-box:nth-of-type(4){
-  width: 720px;
+  width: 755px;
 }
 
 .image-box:nth-of-type(4) img{
