--- a/front/src/components/Header.css
+++ b/front/src/components/Header.css
@@ -32,7 +32,7 @@
   
   header{
     display: flex;
-    padding: 23px 0;
+    padding: 20px 0 20px;
     align-items:baseline;
     justify-content: space-between;
     text-align: center;
@@ -51,7 +51,7 @@
   font-size: 14px;
   line-height: 18px;
     display: flex;
-    gap:70px;
+   gap:15px;
     text-align: left;
     position: relative;
     z-index: 10;
