--- a/front/src/components/CatalogCamera.css
+++ b/front/src/components/CatalogCamera.css
@@ -72,7 +72,7 @@
     align-items: center;
     flex-wrap: wrap;
    gap:15px;
-    border: solid;
+   
   }
 
   .goods-container .card-frame{
@@ -83,11 +83,11 @@
 
   .side-bar{
     margin-left: 30px;
+    width:fit-content;
+   
+    width: 170px;
   }
 
-  .select-block{
-    margin-bottom: 20px;
-  }
 
   .select-block p{
     font-weight: 700;
@@ -102,8 +102,10 @@
     margin-left: 7px;
   }
 
+
   #myRange{
-    width: 60%;
+    width: 70%;
+
   }
 
   .select-block input:checked {
