--- a/front/src/components/Admin.css
+++ b/front/src/components/Admin.css
@@ -22,23 +22,75 @@
     color:#76c302;
 }
 
+.admin-block{
+padding: 30px 30px;
+box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.15);
+display: flex;
+flex-wrap: wrap;
+align-items:start;
+justify-content: space-between;
+gap: 25px;
+}
+
 .admin-block-option{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     margin-bottom: 10px;
+    width: fit-content;
+    max-width: 350px;
+    text-align: left;
+    padding: 8px 10px;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.15);
+}
+
+.input-div{
+    display: flex;
+    /* flex-wrap: wrap; */
+    margin-left: 20px;
+    justify-content: center;
 }
 
 .admin-block-option p{
     margin-bottom: 5px;
+    font-weight: 700;
 }
 
 .admin-block-option input{
     margin-right: 7px;
     padding: 5px;
+    display: inline;
+    width: 80%;
+    border: dashed 1px rgb(112, 193, 14);
 }
 
 .admin-block-option input[type=number]{
     width:50px;
+   
 }
 
 button{
     padding: 7px 20px;
+    height:50px;
+    width: 200px;
+    font-size: 20px;
+    border-radius: 40px;
+    border:none;
+    background-color: #76c302;
 }
+
+.admin-block-option.photo{
+    display: flex;
+    max-width:70%;
+    
+}
+.photo-cont{
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+}
+
+
+
+
+    
