--- a/front/src/components/FirstPage.css
+++ b/front/src/components/FirstPage.css
@@ -200,6 +200,7 @@ z-index: 10;
   border: #EFEFEF solid 0.5px;
   flex-shrink: 0;
   box-sizing: border-box;
+  list-style-type:none;
 }
 
 .product-info{
