--- a/front/src/components/CatalogCamera.css
+++ b/front/src/components/CatalogCamera.css
@@ -1,9 +1,4 @@
-*{
-    font-family: 'Ubuntu', sans-serif;
-    padding: 0;
-    margin: 0;
-    /* border: solid; */
-  }
+
 
 .catalog-content-container{
     max-width: 1210px;
@@ -22,11 +17,11 @@
   }
 
   .basic-text{
-    width: 45%;
+    width: 50%;
     font-family: 'Ubuntu';
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 15px;
     line-height: 24px;
     /* or 171% */
     color: #75758A;
@@ -35,7 +30,8 @@
   }
 
   #price-selection{
-    display: inline-block;
+    display: flex;
+    
     font-family: 'Ubuntu';
     font-style: normal;
     font-weight: 400;
@@ -43,7 +39,6 @@
     padding: 4px 10px;
     border-radius: 50px;
     color: #75758A;
-
     box-shadow: 0px 2px 6px ;
     transition:0.5s;
     border: none;
@@ -78,16 +73,19 @@
   .goods-container-ul{
     display: flex;
     flex-wrap: wrap;
+    gap:15px;
   }
 
   .goods-container .card-frame{
     min-width: 200px;
     width: 32%;
     justify-content: space-between;
+    margin-bottom: 15px;
+    
   }
 
   .side-bar{
-    margin-left: 30px;
+    margin-left: 50px;
     width:fit-content;
     width: 170px;
   }
