--- a/front/src/components/Admin.css
+++ b/front/src/components/Admin.css
@@ -84,7 +84,13 @@ gap: 25px;
     row-gap: 10px;
 }
 
+.hiddenFields{
+    color:rgb(232, 230, 230);
+}
 
+.hiddenFields .input-div input{
+    border-color: rgb(236, 234, 234);
+}
 
 
     
