--- a/front/src/components/Admin/AdminCart.css
+++ b/front/src/components/Admin/AdminCart.css
@@ -14,3 +14,68 @@ form{
     width:100px;
 
 }
+
+.admin{
+    width:100%;
+}
+
+.admin-navigation{
+    width:20%;
+}
+
+.goods{
+    width:fit-content;
+}
+form{
+    padding-bottom: 20px;
+}
+
+form>div{
+    display: flex;
+    width:100%;
+    margin-bottom: 10px;
+}
+
+form>div p{
+    min-width:250px;
+}
+
+.input-div input{
+    width:100%;
+    padding: 3px;
+}
+
+.btns{
+    margin: 40px auto 10px;
+    display: flex;
+    justify-content: center;
+}
+
+.edit-btn{
+    padding: 10px 20px;
+    border-radius: 50px;
+    border: none;
+    background-color:#76c302;
+    
+    transition: 0.5s;
+    
+}
+
+.edit-btn:hover{
+    transition: 0.5s;
+    background-color:#95f505;
+}
+
+.delete-btn{
+    padding: 10px 20px;
+    border-radius: 50px;
+    border: none;
+    background-color:#fd6e6e;
+    transition: 0.5s;
+    margin-right: 15px;
+   
+}
+
+.delete-btn:hover{
+    background-color:#ee0b0b;
+}
