--- a/front/src/components/Admin/Admin.css
+++ b/front/src/components/Admin/Admin.css
@@ -11,6 +11,7 @@
 }
 
 .addItem{
+    width:300px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -18,10 +19,9 @@
     border-radius: 50px;
 }
 
-.addItem:hover{
+.addItem a:hover{
     background-color: rgb(228, 252, 217);
     transition: 0.5s;
-    
 }
 
 .addItem a{
@@ -150,5 +150,35 @@ gap: 25px;
     font-size: 30px;
     margin: 20px auto;
 }
+.goods a{
+    text-decoration: none;
+}
 
+.item-list{
+    display: flex;
+    gap:15px;
+    font-size: 17px;
+    margin-bottom: 20px;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.15);
+    padding: 10px 15px;
+    align-items: center;
+    transition: 0.5s;
+    color: black;
+}
+
+.item-list:hover{
+    transition: 0.5s;
+    cursor: pointer;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.4);
+}
+
+.item-list p{
+    width:25%;
+}
+
+.price-selection-admin{
+    margin-bottom: 50px;
+    font-size: 18px;
+    padding: 10px 15px;
+}
     
