--- a/front/src/components/Admin/AdminCart.css
+++ b/front/src/components/Admin/AdminCart.css
@@ -1,5 +1,5 @@
 .goods{
-    margin-left: 100px;
+    margin-left: 20px;
     padding: 10px 20px;
 }
 form{
@@ -7,7 +7,9 @@ form{
 }
 
 .form-block{
-border-bottom: 1px solid;
+    border-bottom: 1px solid;
+    width: fit-content;
+    margin: 50px auto 0;
 }
 
 .photo-cont {
@@ -28,10 +30,12 @@ border-bottom: 1px solid;
 }
 
 .goods{
-    width:fit-content;
+    width: 100%;
 }
-form{
-    padding-bottom: 20px;
+
+.form-block{
+    padding:20px 40px;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.15);
 }
 
 .form-container{
@@ -98,4 +102,17 @@ form{
 
 .img-delete:hover{
     cursor: pointer;
+}
+
+.message{
+    width: 100%;
+    font-weight: 700;
+    font-size: 30px;
+    text-align: center;
+    margin-top: 50px;
+}
+
+.message a{
+    font-size: 18px;
+   
 }
