--- a/front/src/components/Header.css
+++ b/front/src/components/Header.css
@@ -32,11 +32,12 @@
   
   header{
     display: flex;
-    padding: 20px 0 20px;
+    padding: 40px 0 25px;
     align-items:baseline;
     justify-content: space-between;
     text-align: center;
     height: 40px;
+    border-bottom: #e9e9e9 solid 1px;
   }
   
   .logo{
