--- a/front/src/components/Catalogs/ProductPage.css
+++ b/front/src/components/Catalogs/ProductPage.css
@@ -169,3 +169,9 @@ color: #75758A;
     color: black;
     font-weight: 700;
 }
+
+.recommended{
+margin-top: 100px;
+position: relative;
+margin-bottom: 100px;
+}
