--- a/front/src/components/Footer.css
+++ b/front/src/components/Footer.css
@@ -51,9 +51,13 @@ color: white;
 
 .ul-main-container{
     display: flex;
-    gap:50px;
     margin-top: 50px;
     padding-bottom: 50px;
+    justify-content: space-between;
+}
+
+.ul-main-container li{
+    width: 25%;
 }
 
 .li-main{
@@ -70,5 +74,6 @@ line-height: 26px;
 /* or 186% */
 
 color: #75758A;
+width: 70%;
 }
 
