--- a/front/src/components/FirstPage.css
+++ b/front/src/components/FirstPage.css
@@ -1,4 +1,6 @@
-
+/* *{
+  border: solid 1px;
+} */
 
 
 body{
@@ -129,7 +131,7 @@ color: #000000;
 .content-container-second-page{
   max-width: 1210px;
   margin: 0 auto;
-  padding: 0 50px;
+  /* padding: 0 50px; */
   position: relative;
 }
 
@@ -155,7 +157,7 @@ color: #000000;
 .arrow-left{
   position: absolute;
   top:43%;
-  right:50px;
+  right:5%;
   transition: 0.3s;
   background: #FFFFFF;
 box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.15);
@@ -166,7 +168,7 @@ z-index: 10;
 .arrow-right{
   position: absolute;
   top:43%;
-  left:50px;
+  left:5%;
   transition: 0.3s;
   
   background: #FFFFFF;
@@ -292,13 +294,14 @@ display: inline-block;
 
 .product-options{
   display: flex;
+  gap:10px;
   padding: 12px 20px;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 
 .view-details,.add-to-basket{
-  width:47%;
+  
   padding: 10px 10px;
   border:none;
   background: #FFFFFF;
