--- a/front/src/components/FirstPage.css
+++ b/front/src/components/FirstPage.css
@@ -334,7 +334,7 @@ display: inline-block;
 }
 
 .third-page-box{
-  width: 45%;
+  width: 50%;
   text-align: center;
   margin: 0 auto;
 }
@@ -360,10 +360,11 @@ color: #75758A;
   display: flex;
   justify-content: space-around;
   margin-top: 15px;
+  gap:10px;
 }
 
 .thirt-page-button{
-  width:45%;
+  
   padding: 12px 20px;
   background: #FFFFFF;
 box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.15);
@@ -381,12 +382,12 @@ transition: 1s all;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin-top: 20px;
+  margin-top: 50px;
 }
 
 .image-box{
   position: relative;
-  margin-top: 20px;
+  padding-top: 70px;
 }
 
 .image-box:nth-of-type(4){
