--- a/front/src/components/Catalogs/ProductPage.css
+++ b/front/src/components/Catalogs/ProductPage.css
@@ -178,3 +178,10 @@ position: relative;
 margin-bottom: 100px;
 
 }
+
+.add-to-basket.big{
+    display: block;
+    margin: 15px auto;
+    width:30%;
+    padding: 10px 0;
+}
