--- a/front/src/components/Footer.css
+++ b/front/src/components/Footer.css
@@ -1,3 +1,9 @@
+
+
+footer{
+ margin-top: 200px;
+}
+
 .footer-wrap{
     background-color: #75758A;
     border: none;
@@ -8,6 +14,7 @@
     padding: 20px 0;
     border: none;
     justify-content: space-between;
+   
 }
 
 .subscribe p{
