--- a/front/src/components/Header/Login/Login.css
+++ b/front/src/components/Header/Login/Login.css
@@ -35,6 +35,7 @@
     width:25%;
     font-size: 18px;
     font-weight: 700;
+    margin-right: 10px;
 }
 
 .credentials input{
@@ -46,13 +47,15 @@ margin-bottom: 8px;
 }
 
 .auth-btn{
-    padding: 10px 0px;
+    padding: 10px 20px;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.15);
     border-radius: 15px;
     font-weight: 700;
     transition: 0.3s;
-    background-color: #d7f4c6;
-   
+    
+    border: none;
+    background: linear-gradient(180deg, #8EE902 0%, #4F9C2C 100%);
+    border-radius: 100px;
 }
 
 .auth-btn:hover{
