--- a/front/src/components/Header/Login/Login.css
+++ b/front/src/components/Header/Login/Login.css
@@ -1,7 +1,10 @@
-
+.login h2{
+    width: fit-content;
+    margin: 50px auto 0;
+}
 .wrapp{
     width: 30%;
-    margin: 22% auto;
+    margin: 10% auto;
     text-align: center;
     border-radius: 15px;
 }
@@ -11,6 +14,8 @@
     color: black;
 }
 
+
+
 .credentials-form{
 
     display: flex;
@@ -19,7 +24,7 @@
     margin-bottom: 70px;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.15);
     border-radius: 25px;
-    padding: 50px 40px;
+    padding: 50px 40px 50px;
 }
 
 .credentials{
