--- a/front/src/components/Header/Login/Login.css
+++ b/front/src/components/Header/Login/Login.css
@@ -4,7 +4,7 @@
 }
 .wrapp{
     width: 30%;
-    margin: 10% auto;
+    margin: 7% auto;
     text-align: center;
     border-radius: 15px;
 }
@@ -66,7 +66,7 @@ margin-bottom: 8px;
 .auth-btn:hover{
 cursor: pointer;
 transition: 0.5s;
-background-color: #81d602;
+background: linear-gradient(180deg, #85dd02 0%, #488d28 100%);
 }
 
 .registr{
