--- a/front/src/components/Header/Login/Registration.css
+++ b/front/src/components/Header/Login/Registration.css
@@ -65,5 +65,23 @@ font-size: 17px;
 .auth-btn-reg:hover{
 cursor: pointer;
 transition: 0.5s;
-background-color: #81d602;
+background: linear-gradient(180deg, #85dd02 0%, #488d28 100%)
+}
+
+.successMessage{
+    width: 30%;
+    
+    display: flex;
+    flex-direction: column;
+    margin: 100px auto;
+    color: #81d602;
+    font-size: 25px;
+    font-weight: 700;
+    text-align: center;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.15);
+    padding: 50px 70px;
+}
+
+.successMessage h2{
+    margin-bottom: 15px;
 }
