--- a/front/src/components/Header/Login/Authorized.css
+++ b/front/src/components/Header/Login/Authorized.css
@@ -15,3 +15,32 @@ margin-top: 15px;
 width:200px;
 font-size: 15px;
 }
+
+.greetings{
+    display: flex;
+    flex-direction: column;
+   align-items: start;
+}
+
+
+.greetings p{
+    font-size: 30px;
+    font-weight: 700;
+    margin-top: 30px;
+   
+}
+
+.greet-btn{
+    display: block;
+    width: max-content;
+    margin: 20px 0 30px;
+    padding: 15px 45px;
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.15);
+    border-radius: 15px;
+    font-size: 14px;
+    font-weight: 700;
+    transition: 0.3s;
+    border: none;
+    background: linear-gradient(180deg, #8EE902 0%, #4F9C2C 100%);
+    border-radius: 100px;
+}
