--- a/front/src/components/Header/Confirmation.css
+++ b/front/src/components/Header/Confirmation.css
@@ -29,7 +29,9 @@
     
 }
 
-
+.goods-wrapper h4{
+    font-size: 25px;
+}
 
 .post-point label{
     display: block;
@@ -45,7 +47,7 @@
 .confirm-btn.confirmation{
     position: relative;
     background-color: transparent;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: 700;
     padding-left: 0;
     margin-top: 30px;
