--- a/front/src/components/Header/OrderCart.css
+++ b/front/src/components/Header/OrderCart.css
@@ -18,13 +18,15 @@
 
 .period{
     display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
     gap: 10px;
     justify-content: space-between;
     margin-top: 50px;
 }
 
 .from, .to{
-    width: 40%;
+    width: 32%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -46,7 +48,7 @@
 }
 
 .from input, .to input{
-    width:30%;
+    width:50%;
     padding: 10px 15px;
     border: none;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.15);
@@ -152,4 +154,16 @@ background-color: #95f506;
     bottom:-90px;
     background-color: transparent;
     font-size: 22px;
+}
+
+.confirm-btn.date{
+    margin-right: 50px;
+    position: relative;
+    right: 0;
+    margin: 12px 0;
+    padding: 15px 25px;
+    border-radius: 50px;
+    background-color: #71bc02;
+    border: none;
+    transition: 0.5s;
 }
