--- a/front/src/components/Header/OrderCart.css
+++ b/front/src/components/Header/OrderCart.css
@@ -26,7 +26,7 @@
 }
 
 .from, .to{
-    width: 32%;
+    min-width: 200px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -48,7 +48,7 @@
 }
 
 .from input, .to input{
-    width:50%;
+    /* width:50%; */
     padding: 10px 15px;
     border: none;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.15);
@@ -137,14 +137,15 @@ padding: 10px 0;
     position: absolute;
     right: 0;
     margin-top: 100px;
-    padding: 15px 25px ;
+    padding: 15px 30px ;
     border-radius: 50px;
+    font-weight: 700;
     background-color: #71bc02;
     border: none;
     transition: 0.5s;
 }
 
-.confirm-btn:hover{
+.confirm-btn:hover, .confirm-btn.date:hover{
 cursor: pointer;
 transition: 0.5s;
 background-color: #95f506;
