--- a/front/src/components/Header/Login/Authorized.css
+++ b/front/src/components/Header/Login/Authorized.css
@@ -2,9 +2,9 @@
     margin-top: 30px;
 }
 
-.personalPage span{
+/* .personalPage>span{
    color: #76c302;
-}
+} */
 
 .options.personal-nav{
 justify-content: end;
