--- a/front/src/components/Header/Login/Authorized.css
+++ b/front/src/components/Header/Login/Authorized.css
@@ -41,8 +41,16 @@ font-size: 15px;
     font-weight: 700;
     transition: 0.3s;
     border: none;
-    background: linear-gradient(180deg, #8EE902 0%, #4F9C2C 100%);
+    background-color: #71bc02;
     border-radius: 100px;
+    transition: 0.5s;
+}
+
+
+.greet-btn:hover{
+    cursor: pointer;
+transition: 0.5s;
+background-color: #95f506;
 }
 
 .heading.old{
