--- a/front/src/components/Header/Header.css
+++ b/front/src/components/Header/Header.css
@@ -2,7 +2,7 @@
     font-family: 'Ubuntu', sans-serif;
     padding: 0;
     margin: 0;
-    /* border: solid; */
+    /* border: solid 1px; */
   }
 
 
