--- a/src/components/Header/Comparison.css
+++ b/src/components/Header/Comparison.css
@@ -1,3 +1,5 @@
+
+
 .compare-goods{
     margin-top: 30px;
     margin-bottom: 50px;
@@ -6,81 +8,82 @@
 .compare-goods-span{
     /* margin-right: 30px; */
 }
-.block-separator{
-    border-top: #EFEFEF 1px solid;
-   padding: 10px 0;
-}
-
-.sticky{
-    background-color: white;
-    position: sticky;
-    top:0;
-    z-index: 10;
-    border-bottom: #e9e9e9 solid 3px; 
-}
-
-.ul-container {
-    display: flex;
-    justify-content:space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    
-}
-
-
-.ul-container li.head{
-    text-align: left;
-    width:15%;
-}
-
-.content-line{
-    display: flex;
-    justify-content: space-around;
-    width: 70%;
-    
-}
-
-
-.ul-container li{
-    text-align: center;
-    width: 200px;
-    
-}
-.dummy li{
-    width: 10%;
-}
-
-.head{
-    font-size: 17px;
-    font-weight: 700;
-    text-align: left;
-    /* border-bottom: #e9e9e9 solid 1px; */
-    
-}
-
-.compareImgs{
-    position: relative;
-    height: 100px;
-    padding: 15px 0;
-}
-
-.compare-delete{
-    position: absolute;
-    width: 30px;
-}
-.compare-delete:hover{
-    cursor: pointer;
-}
 
 .compare-goods-span:hover{
 cursor: pointer;
 }
 
-.compare-goods-span.active{
+.compare-goods-span.active {
     color: rgb(73, 190, 5);
     font-weight: 700;
 }
 
 .num{
     margin-right: 30px;
+}
+
+.comp-wrapp{
+    display: flex;
+    width: 100%;
+}
+
+
+.compareImg{
+    height: 100px;
+    display: block;
+}
+
+.labels{
+    min-width:180px;
+    
+    text-align: center;
+}
+
+.labels.lables p {
+    font-weight: 700;
+}
+
+.comparedFeature{
+    display: flex;
+    font-weight: 700;
+    padding: 10px 0;
+    align-items: center;
+    font-weight: 400;
+    justify-content: center;
+    border-bottom: #e9e9e9 solid 1px;
+}
+
+.column{
+    width:180px;
+    text-align: center;
+}
+
+.data{
+    display: flex;
+   width:74%;
+   justify-content: center;
+   gap:3%;
+}
+
+
+.dummyLabel{
+    display: block;
+    margin: 21px 0;
+}
+
+.delete-compar-btn{
+    display: block;
+    height: 30px; 
+    margin-top: 10px;
+}
+
+.photoBlock{
+    height: 140px;
+    display: flex;
+    flex-direction: column;
+}
+
+.labels.sticky.photoBlock{
+    height: 140px;
+    padding: 0;
 }
