--- a/src/components/Header/Comparison.css
+++ b/src/components/Header/Comparison.css
@@ -51,6 +51,7 @@ cursor: pointer;
     font-weight: 400;
     justify-content: center;
     border-bottom: #e9e9e9 solid 1px;
+    height: 35px;
 }
 
 .column{
