--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -32,18 +32,23 @@
   
   header{
     display: flex;
+    flex-wrap: wrap;
     padding: 40px 0 25px;
     align-items:baseline;
     justify-content: space-between;
     text-align: center;
     height: 40px;
     border-bottom: #e9e9e9 solid 1px;
+    z-index: 10;
   }
   
   .logo{
-    display: flex;
-    align-items: cenlter;
+    display: inline-block;
+   position: relative;
+   top:8px;
   }
+  
+
   
   .nav-list{
     font-family: 'Ubuntu';
@@ -52,15 +57,26 @@
   font-size: 14px;
   line-height: 18px;
     display: flex;
-   gap:15px;
+    flex-wrap: wrap;
     text-align: left;
     position: relative;
+    /* top:-8px; */
     z-index: 10;
+  }
+
+  .nav-li{
+    margin-right:30px;
+    
+  }
+
+  .nav-li:first-of-type{
+    margin-right:0px;
   }
 
   .options-list{
     display: flex;
-    gap:25px;
+   
+    gap:15px;
     
   }
 
@@ -73,17 +89,17 @@
   .nested-list{
     visibility: hidden;
     height: max-content;
-    /* position: absolute; */
+
     margin-top: 10px;
     background-color: white;
     margin-left: -15px;
     
     padding: 5px 0;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.15);
-   
     z-index: 0;
   }
 
+ 
   .visible{
     visibility: visible;
     height: max-content;
@@ -137,11 +153,22 @@
     background-color: #71bb02;
     padding:2px 5px;
     border-radius: 50px;
-    top:-8px;
+    top:-12px;
+    right: -12px;
   }
 
   .iconNumber.clientName{
-    top:35px;
+    display: inline-block;
     position: relative;
     top:-17px;
+    right: 5px;
+  }
+
+
+  .loginImgLi{
+    min-width:70px;
+  }
+
+  .loginImg{
+    display: inline-block;
   }
