--- a/src/components/FirstPage.css
+++ b/src/components/FirstPage.css
@@ -435,7 +435,7 @@ transition: 1s all;
   justify-content: space-between;
 position: absolute;
 top:-280px;
-left:150px;
+left:16%;
 z-index: 10;
 
 }
