--- a/src/components/Header/Confirmation.css
+++ b/src/components/Header/Confirmation.css
@@ -47,7 +47,7 @@
 
 .confirm-btn.confirmation{
     position: relative;
-    background-color: transparent;
+    background:none;
     font-size: 20px;
     font-weight: 700;
     padding-left: 0;
