--- a/src/components/Header/Login/Login.css
+++ b/src/components/Header/Login/Login.css
@@ -1,6 +1,7 @@
 .login h2{
     width: fit-content;
     margin: 50px auto 0;
+    color: #60B021;
 }
 .wrapp{
     width: 30%;
@@ -24,7 +25,7 @@
     margin-bottom: 70px;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.15);
     border-radius: 25px;
-    padding: 50px 40px 50px;
+    padding: 30px 40px 50px;
 }
 
 .credentials{
@@ -45,7 +46,10 @@
 
 .credentials input{
    padding: 5px 10px;
-   width:100%;
+   width:90%;
+   background: #F5F5F5;
+    border: 1px solid #E3E3E3;
+    box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.15);
 }
 
 .wrapp p{
@@ -53,6 +57,7 @@ margin-bottom: 8px;
 }
 
 .auth-btn{
+    margin-top: 10px;
     padding: 10px 20px;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.15);
     border-radius: 15px;
@@ -67,7 +72,7 @@ margin-bottom: 8px;
 .auth-btn:hover{
 cursor: pointer;
 transition: 0.5s;
-background: linear-gradient(180deg, #85dd02 0%, #488d28 100%);
+background: linear-gradient(180deg, #85dd02 0%, #3d7622 100%);
 }
 
 .registr{
