--- a/src/components/Header/Confirmation.css
+++ b/src/components/Header/Confirmation.css
@@ -93,3 +93,10 @@ padding: 5px 10px;
     display: flex;
 }
 
+.authErr{
+    display: block;
+    width:250px;
+    padding-left: 70px;
+    padding-top: 10px;
+    color: rgb(206, 6, 6);
+}
