--- a/src/components/Header/Login/Authorized.css
+++ b/src/components/Header/Login/Authorized.css
@@ -1,10 +1,3 @@
-.personalPage h1{
-    margin-top: 30px;
-}
-
-/* .personalPage>span{
-   color: #76c302;
-} */
 
 .options.personal-nav{
 justify-content: end;
@@ -24,10 +17,10 @@ font-size: 15px;
 
 
 .greetings p{
-    font-size: 30px;
+    font-size: 25px;
     font-weight: 700;
     margin-top: 30px;
-   
+    color: #9191a8;
 }
 
 .greet-btn{
