--- a/src/components/FirstPage.css
+++ b/src/components/FirstPage.css
@@ -400,6 +400,7 @@ transition: 1s all;
 .thirt-page-button:hover{
   background-color: #8EE901;
   transition: 1s all;
+  cursor: pointer;
 }
 
 .images-page{
