--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -40,15 +40,30 @@
     height: 40px;
     border-bottom: #e9e9e9 solid 1px;
     z-index: 10;
+    
   }
   
   .logo{
     display: inline-block;
    position: relative;
    top:8px;
+   width:15%;
+  }
+
+  .burger{
+    height: 35px;
+    position: relative;
+    top:-8px;
+    visibility: hidden;
   }
   
-
+  .navAndlogin{
+   
+    display: flex;
+    flex-direction: row;
+    width:80%;
+   justify-content: space-around;
+  }
   
   .nav-list{
     font-family: 'Ubuntu';
@@ -62,11 +77,17 @@
     position: relative;
     /* top:-8px; */
     z-index: 10;
+    width:100%;
   }
+
+
 
   .nav-li{
     margin-right:30px;
-    
+  }
+
+   .nav-li:last-of-type{
+    margin-right:0px;
   }
 
   .nav-li:first-of-type{
@@ -172,3 +193,94 @@
   .loginImg{
     display: inline-block;
   }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  @media screen and (max-width:1080px) {
+
+    .navAndlogin{
+        width:58%;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+    }
+
+    .burger{
+      visibility: visible;
+    }
+  
+    .nav-li{
+      display: none;
+    }
+
+    .nav-list-burger{
+      display: flex;
+      position: fixed;
+      top:00px;
+      left:0;
+      margin: 0 auto;
+      height: 100vh;
+      width: 100vw;
+      background-color: rgba(225, 246, 222, 0.4);
+     backdrop-filter: blur(18px);
+      z-index: 20;
+      text-align: left;
+     font-weight: 700;
+    }
+
+    .nav-list-burger a{
+        text-decoration: none;
+        color: black;
+    }
+
+    .nav-list-burger>ul{
+      width:fit-content;
+      margin: 0 auto;
+      position: relative;
+      top:40px;
+    }
+
+    .nav-li-burger{
+      display: block;
+      margin: 20px 0;
+    }
+
+    .nested-list-burger>ul{
+      
+    }
+
+    .nested-list-burger li{
+      list-style-type: circle;
+      margin-top: 12px;
+      margin-left: 30px;
+      font-weight: 400;
+    }
+
+     .nested-list-burger a:hover{
+      color: #71bb02;
+    }
+
+    .burger-close{
+      width:35px;
+      height: 35px;
+      position: relative;
+      top:20px;
+      right: 60px;
+    }
+
+    .nav-li-burger a:hover{
+      color: #71bb02;
+    }
+
+    
+}
