--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,8 +4,6 @@
     margin: 0;
   
   } 
-
-
   
   ul{
     list-style-type: none;
@@ -259,13 +257,20 @@
       }
     }
 
-/*     
-    .fading{
+    .nav-list-burger-closed{
       width:100vw;
       height: 100vw;
       transition: 1a ease-in;
       animation: fade 1s ;
     }
+
+    
+    /* .fading{
+      width:100vw;
+      height: 100vw;
+      transition: 1a ease-in;
+      animation: fade 1s ;
+    } */
 
     @keyframes fade
     {
@@ -278,7 +283,7 @@
       100%{
         height:0wv;
       }
-    } */
+    }
 
 
     .nav-list-burger a{
